# Jenkins-Log-Analyzer

./: README.md  main.py  pyproject.toml
src/: jenkins_client.py
