[project]
name = "jenkins-log-analyzer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.117.0",
    "langchain>=1.3.14",
    "langchain-anthropic>=1.4.8",
    "langchain-google-genai>=4.2.7",
    "langchain-openai>=1.3.5",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
